--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -1,4 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>天灾人祸</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/17/n11727104.md#1" target="_blank">受天气影响 大陆11省逾百条高速路被封闭</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/17/n11727104.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188987959-150x120.jpg" align ="left"></a>大陆多地因受雨雪天气、大雾天气影响，12月17日早上，山西、辽宁、黑龙江、天津、河北、山西、山东、河南、重庆11省内共逾百条高速路被封闭。此外，黑龙江哈尔滨机场16日至17日早上曾一度关闭机场跑道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank">猪肉催生河南新首富 身家超千亿</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/6b9e95008a2b06c4626f19d9e5e56c0a-150x120.jpg" align ="left"></a>受非洲猪瘟疫情影响，中国大陆猪肉价格暴涨，秦英林凭借牧原股份的股价大涨，不仅在2019年晋升河南首富，其家族财富更是在福布斯内地富豪榜上，反超王健林、李彦宏、雷军等众多商界大佬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/15/n11723519.md#1" target="_blank">大到暴雪 京津冀等多地积雪将超8厘米</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/15/n11723519.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/snow-1148773_1920-150x120.jpg" align ="left"></a>12月15日，大陆中央气象台预计，今天（15日）下午至明天下午，京津冀等地局部地区的积雪达8厘米以上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/14/n11722829.md#1" target="_blank">四川珙县煤矿发生渗水事故 致4死14人失踪</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/14/n11722829.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d2d70a1d323385826458f180991ec984-150x120.jpg" align ="left"></a>四川省宜宾市珙县一座煤矿日前发生渗水事故，目前已造成4人遇难，14人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 1:05 AM							</td></tr>
@@ -9,6 +10,8 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank">侵大陆并定殖 草地贪夜蛾明年恐进暴发阶段</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-954036218-150x120.jpg" align ="left"></a>中共农业农村部称，草地贪夜蛾今年入侵大陆并定殖，明年恐进入爆发阶段，春季向长江流域迁飞的时间会比2019年提前1个月左右，造成的危害预计会比2019年更大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 7:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/9/n11711410.md#1" target="_blank">阴霾袭华北黄淮 北京等55城发重污染预警</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/9/n11711410.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111262611086-150x120.jpg" align ="left"></a>阴霾大面积持续多日笼罩大陆华北、黄淮、江汉等地区，截至12月9日，有55个城市启动重污染天气预警。其中，北京市达“5级重度污染”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/5/n11702300.md#1" target="_blank">大陆数百万“蓝嘴唇”病人靠吃伟哥续命</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/5/n11702300.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/04/1312271502051528-150x120.jpg" align ="left"></a>大陆年仅8岁的河南许昌女孩小雅（化名）每天要靠吃“伟哥”（也被叫做“西地那非”，是俗称的壮阳药）维持生命，不是电影情节，而是真实的故事，触动了很多人的神经。12月5日，澎湃新闻的长篇报导，曝光大陆有数百万像小雅一样、靠“伟哥”类药物续命的病人群体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/17/n11727202.md#1" target="_blank">浙江矿山塌方2千平方米厂房被埋 3人失踪</a><br></h3>12月17日10时后，浙江省丽水市松阳县新兴镇安露源机制砂有限公司矿山突然塌方，2000余平方米厂房被掩埋，导致3人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/17/n11727111.md#1" target="_blank">贵州发生煤矿事故 致14人死亡2人被困</a><br></h3>据陆媒报导，12月17日1时30分许，贵州安龙县广隆煤矿发生一起煤与瓦斯突出事故。经初步核实，当班井下作业人员23人，7人安全升井。截至9时，事故造成14人死亡，2人被困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11725870.md#1" target="_blank">河南高速现多起事故 5人惊慌逃生坠桥死亡</a><br></h3>12月15日晚上7时许，因雨雪天气，河南省三门峡市连霍高速K795连续发生多起交通事故，5名司乘人员惊慌中逃生，翻越墙式护栏意外坠桥死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 7:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11725328.md#1" target="_blank">湖南新晃县一中操场埋尸案明日开审</a><br></h3>曾轰动一时的湖南新晃县一中“操场埋尸案”，明日（12月17日）将公开庭审。嫌疑人杜少平被指控犯故意杀人罪、故意伤害罪、寻衅滋事罪、非法拘禁罪、聚众斗殴罪、强迫交易罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/14/n11722469.md#1" target="_blank">山东一动物园维修工疑被机器挤压身亡</a><br></h3>12月13日，山东济南市天桥区的济南动物园一名维修工人疑似被游乐场机器挤压，当场身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:00 PM							</td></tr>
@@ -32,12 +35,5 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/7/n11707059.md#1" target="_blank">兰州兽研所布鲁氏菌阳性人数增至96人</a><br></h3>目前，中国农业科学院兰州兽医研究所布鲁氏菌阳性人数已增至96人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/6/n11705039.md#1" target="_blank">佛山山火持续24小时 火势随风力加大蔓延</a><br></h3>12月5日13时53分，广东省佛山市高明区荷城街道凌云山发生山火，大火烧了整整一天（24小时），到6日火势扩大，目前火还没有灭并随风力加大蔓延。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/6/n11704994.md#1" target="_blank">黔高速37车连环撞23人伤 有人颅脑损伤</a><br></h3>12月6日上午8时20分左右，遵蓉高速公路（贵州遵义至四川成都）在遵义习水县路段，疑因大雾和路面结冰湿滑等原因，导致37车连环追撞，至少23人受伤送院，有人重度颅脑损伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:01 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/5/n11702307.md#1" target="_blank">浏阳烟花厂爆炸7死 厂房成平地 汽车炸变形</a><br></h3>昨日（12月4日），湖南长沙浏阳市澄潭江镇碧溪烟花制造有限公司石下工区发生爆炸后，已致7人死13人受伤。今日（12月5日）有消息指，当时厂房炸成废墟，面包车都被炸得扭曲变形，现场还升起蘑菇云状黑烟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/5/n11701869.md#1" target="_blank">广东一木材厂着火延烧3栋民宅 现场有油罐</a><br></h3>12月5日早上9点30分许，广东省清远市清城区一木材厂发生火灾，着火面积约700平方米，并延烧到隔壁的三栋居民楼。同时，现场有三只油罐。但着火原因依然不明。
-
-中共央视新闻客户端披露上述消息。据流出视频显示，现场多处木材垛同时着火，火势燃烧猛烈，居民楼底层也着火，现场浓烟滚滚。
-
-责任编辑：萧律生......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/5/n11701759.md#1" target="_blank">唐山4.5级地震后 新疆现4.9级地震</a><br></h3>12月5日10时46分，新疆阿克苏地区拜城县（北纬41.73度，东经81.65度）发生4.9级地震，震源深度15千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_5.md#1<br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_5.htm">http://www.epochtimes.com/gb/ncid280_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
