--- a/gb/ncid281_5.md
+++ b/gb/ncid281_5.md
@@ -8,6 +8,7 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/13/n11451442.md#1" target="_blank">悉尼科大学者拒绝中共索取护照号码的要求</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/13/n11451442.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/08/808220848411732-150x120.jpg" align ="left"></a>悉尼科技大学（University of Technology Sydney，简称UTS）的教授和学者们拒绝了中共教育部要求他们提供护照号码和出生日期等个人信息的要求，中方称他们在提供这些信息后才能够在悉尼科大教授中澳合办的课程。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月14日 6:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/11/n11446183.md#1" target="_blank">《甲方乙方2》开机 冯小刚方面称与新片无关</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/11/n11446183.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-513509056-150x120.jpg" align ="left"></a>被外界视为《甲方乙方》续集的新片《甲方乙方2》，8月11日在山东青岛开机。电影由朱凌峰导演，今年4月在中国电影局立项。值得关注的是，冯小刚方面回应媒体时明确表示，该项目与前作的导演冯小刚无关，冯竟然对立项并不知情，令人唏嘘不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月12日 8:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/9/n11443212.md#1" target="_blank">李英爱重返大银幕 新片入围多伦多影展</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/9/n11443212.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/1605242332471487-e1464147279509-150x120.jpg" align ="left"></a>热门韩剧《大长今》的主角李英爱，继2005年主演朴赞郁执导的《亲切的金子》后，今年重返大银幕。其参演的韩片《寻找我》（Bring Me Home），日前入围第44届多伦多国际影展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月10日 7:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/7/n11438018.md#1" target="_blank">中共下达金马禁令令人不齿 叶德娴：各行各路</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/7/n11438018.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/PO_X7794_meitu_1-150x120.jpg" align ="left"></a>在稍早前发布与金马奖撞期等变相抵制金马奖的消息后，中共国家电影局8月7日直接下达禁令：“暂停大陆影片和人员参加2019年第56届台湾金马影展。”突如其来的消息令人震惊和不齿，曾荣膺金马影后的香港资深艺人叶德娴表示：“勉强没有幸福，各行各路。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月08日 6:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/7/n11437780.md#1" target="_blank">陆片竞逐金马奖遭禁 导演张赞波斥电影局可耻</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/7/n11437780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/VCG11440842784-150x120.jpg" align ="left"></a>第56届台湾金马奖将于11月23日举行，参赛作品7月31日截止申报。不过，陆媒《中国电影报》8月7日在官方微博引述中共国家电影局的消息称，“暂停大陆电影及人员参加今年的台湾金马影奖。”消息一出，大陆独立导演张赞波在脸书发文，怒斥中共电影局“可耻”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月08日 3:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/1/n11422492.md#1" target="_blank">内幕：澳洲华裔教授薛京灵与中共的合作</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/1/n11422492.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/e66dce956f0a06790a1183c9fe55ee98-150x120.jpg" align ="left"></a>近期被澳洲媒体曝光的新南威尔士大学计算机科学专业教授薛京灵，不仅是中共“千人计划”的一员，与中共国防科技大学有“深厚”联系；还在大陆某些公司任职，甚至跟华为还有关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月02日 4:29 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/7/25/n11407616.md#1" target="_blank">揭秘：渗透欧洲华人 平静表面下的中共统战</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/7/25/n11407616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/09/1209062330501657-150x120.jpg" align ="left"></a>近年来，国际社会越来越关注中共利用统战来主导话语权，并通过对学术界海外华人的渗透，将先进的技术和专业知识带回中国。中共统战是如何展开的呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月28日 8:08 PM							</td></tr>
@@ -26,7 +27,6 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/23/n11473878.md#1" target="_blank">《哪吒》走红被指抄袭 影视公司喊片方对剧本</a><br></h3>大陆动画片《哪吒之魔童降世》（《哪吒》）上映29天，已连续28天成为单日票房冠军，累计票房超过43.1亿元人民币，成为大陆最卖座动画片。不过，23日下午，“晋升中国电影票房总榜第三名的《哪吒》涉嫌抄袭”突然冲上微博热搜榜首，原来，“中影华腾”影视公司喊话《哪吒》片方对《五维记忆》创意秀剧本。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月24日 6:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/15/n11454086.md#1" target="_blank">中国大陆电影人移民加拿大为何被拒？</a><br></h3>中国大陆影视圈的千万富翁卫先生多次来加拿大旅游后，爱上这个国家，并决定移民加拿大。他以自雇人士（Self-employed）的身份递交移民申请，但很不顺利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月16日 12:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/13/n11449886.md#1" target="_blank">吃了一盘黑木耳 杭州男子失去意识进ICU</a><br></h3>上月底，浙江杭州40多岁的张先生被送往医院。经检查，他的肝、肾功能衰竭，有严重凝血功能障碍。医生表示，张先生是吃了隔夜的黑木耳导致的米酵酸菌中毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月13日 3:41 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/7/n11438018.md#1" target="_blank">中共下达金马禁令令人不齿 叶德娴：各行各路</a><br></h3>在稍早前发布与金马奖撞期等变相抵制金马奖的消息后，中共国家电影局8月7日直接下达禁令：“暂停大陆影片和人员参加2019年第56届台湾金马影展。”突如其来的消息令人震惊和不齿，曾荣膺金马影后的香港资深艺人叶德娴表示：“勉强没有幸福，各行各路。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月08日 6:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/7/22/n11401219.md#1" target="_blank">中共新疆白皮书被批用谎言编造历史</a><br></h3>继近期国际社会严厉批评中共新疆政策后，中共当局21日发布《新疆的若干历史问题》白皮书进行诡辩，随后遭到“世界维吾尔代表大会”炮轰。另有媒体披露，中共还删除了小学教科书中关于新疆维吾尔人等文章。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 5:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/7/15/n11386237.md#1" target="_blank">家庭投入的无底洞 北大教授批教育双轨制</a><br></h3>在近日北京大学举办的论坛上，北大教授渠敬东指出了现行教育体制的一系列问题，学生的身体健康，心理健康堪忧，而教育双轨制更成了家庭资源无限投放的无底洞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月16日 3:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281_6.md#1">下一页</a></h3></td></tr>
