--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789168.md#1" target="_blank">大雾阴霾影响 大陆9省73条高速等被封闭</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789168.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-631293768-150x120.jpg" align ="left"></a>1月13日，河北、内蒙古、江苏中南部、安徽中北部、山东西北部、河南中部、湖北东南部、湖南东部等地的出现阴霾或重阴霾，局部地区能见度不足50米。上述省份境内73条高速、81个路段道路封闭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789254.md#1" target="_blank">朱军要复出？ 性骚扰受害人弦子呼吁抵制</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789254.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/xuanzi-01-150x120.jpg" align ="left"></a>因陷性骚扰案，中共央视主持人朱军连续两年缺席“春晚”，但随着2020新年的临近，湖北卫视邀请朱军复出主持新春盛典的消息传出，遭朱军性骚扰的受害人弦子在微博发起“抵制朱军复出”行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788767.md#1" target="_blank">大陆合作商陷困境 六旗乐园被下调评级</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788767.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/04/018ad8c0696bbb3c8606ef6a2616d23c-150x120.jpeg" align ="left"></a>世界上最大的主题乐园连锁品牌六旗乐园因大陆合作伙伴资金短缺陷入困境，日前被富国银行下调公司股票评级，股票也下跌了近18%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789086.md#1" target="_blank">秦光荣落马后首度出镜 奢华秦家大院曝光</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1302072018142039-600x400-1-150x120.jpg" align ="left"></a>日前，中共官媒专题片披露了云南省委前书记秦光荣贪腐的细节，许多内容是首次曝光。如在老家永州的1600平方米的“秦家大院”，被指奢华气派。
+
+1月12日晚，中共央视播出中纪委反腐专题片的第一集，秦光荣首度现身说法。专题片提到，秦光荣走上领导岗位后，从未停止收受红包礼金，过年过节收拜年拜节的钱，庆贺生日收祝寿的钱，出国访问收“补贴钱”，搬家添丁收庆贺的钱，用.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11761898.md#1" target="_blank">【揭秘】暗流涌动 美中间谍战四大战场</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11761898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/07/907231923212196-150x120.jpg" align ="left"></a>中共为争夺全球霸权，对美国和其它国家进行具侵略性和技巧性间谍战。中共利诱美国前情报人员为其工作；针对美国公司和政府数据库进行网络攻击；利用个人和黑客窃取私营部门的商业机密；利用风险资本投资获取敏感技术；还利用学者学生瞄准大学和研究机构窃取知识产权等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788983.md#1" target="_blank">猪肉成硬通货 贵州学校以猪肉代奖学金</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788983.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/3ca210ff9d2669abe506344451254966-150x120.jpg" align ="left"></a>猪肉价格涨不停，让猪肉在大陆变成为另类“货币”。贵州一间学校为奖励期末考试成绩优异的学生，派发的不是奖学金，而是一斤斤的猪肉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788886.md#1" target="_blank">传美中初步协议有更改 姆钦：空穴来风</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788886.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/a5a13bc5b6165622ddf71daec633ca53-150x120.jpg" align ="left"></a>美财长史蒂芬?姆钦（Steven Mnuchin）周日（13日）在接受美媒访问时说，有关美中初步协议有更动的传闻，纯属“空穴来风”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 10:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788857.md#1" target="_blank">贸易协议中共会违约吗？各方关注</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1180494134-1-150x120.jpg" align ="left"></a>第一阶段美中贸易协议本周即将签署。但是中共出尔反尔的历史引发各界质疑：中共会遵守承诺吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788080.md#1" target="_blank">恭喜蔡英文 何韵诗讽林郑为“反共之母”</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1906300234222384-150x120.jpg" align ="left"></a>1月11日，台湾大选落幕，蔡英文以逾817万的史上最高票击败对手，成功连任总统。当晚，香港歌手何韵诗在facebook（fb）连续发文，她在“恭喜台湾，恭喜小英总统”的同时，也炮轰香港特首林郑月娥的“固执”和“死不认错”，“令香港人和台湾人觉醒”、“令全世界都认识到中共的邪恶”。她嘲讽林郑是“名副其实的反共之母”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788570.md#1" target="_blank">疑涉港警贪腐题材 郭富城梁朝伟新片未过审</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788570.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/guo-fucheng-liang-chaowei-_meitu_1-150x120.jpg" align ="left"></a>涉及警察贪腐和黑社会题材的电影《风再起时》，由郭富城和梁朝伟等主演、翁子光导演。影片于2017年开拍，2018年3月前杀青，原本安排在2018年圣诞档期，但现传出仍然未通过中共电影总局的审查，该片上映仍遥遥无期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788333.md#1" target="_blank">杜汶泽请求蔡英文：救助流亡到台湾的香港人</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788333.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-05_16-24-05-150x120.jpg" align ="left"></a>一直支持香港逆权运动的艺人杜汶泽，在台湾大选前曾专门拍摄短片，呼吁台湾人“珍惜民主”，“1月11日回家投票”。在大选结果出炉后，他于facebook （fb）发文：“蔡总统，恭喜你成功连任！”并请求：“希望蔡总统可以救助流亡到台湾的香港人！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788648.md#1" target="_blank">台湾大选是中美之争 中共输掉台湾</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788648.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/HKDJY20200113A01_v5_cut111-1-150x120.jpg" align ="left"></a>1月11日，台湾大选落幕，民进党的蔡英文以817万高票，击败国民党韩国瑜的552万票获得连任。这次选举吸引了全球共13个观选团，107位学者，其中美国学者观选团就有9团，共95人。中共称，这次美国深度介入台湾大选。其实以往美国也一直重视台湾，不过今年不同的是，过去近半个世纪美国和中共一直是友好关系，但自从美国总统特朗普改变对中共的态度之后，中美关系就开始全面.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 8:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788643.md#1" target="_blank">王赫：习近平可识“桃花源中人”？</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1172509081-600x400-150x120.jpg" align ="left"></a>1月8日，中共召开“不忘初心、牢记使命”主题教育总结大会，习近平在讲话中向全党喊话：与时俱进，不能做“不知有汉，无论魏晋”的桃花源中人。习近平这里引用“桃花源中人”一词，完全是对这个词的错解、误用。当然，这也不能全怪习近平，因为这个词在中共党史中有特定的含义，毛、邓都用过，习也是照搬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:24 AM							</td></tr>
@@ -23,17 +35,7 @@
 德黑兰.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 9:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/27/n11750385.md#1" target="_blank">中共在美国后院扮何角色？美将军揭内幕</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/27/n11750385.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1139326037-150x120.jpg" align ="left"></a>中共一直利用“一带一路”具有限制条款的投资倡议在全球扩张势力，且“一带一路”已让一些国家陷入债务困境。在美国后院的拉美，乃至南美国家，中共也开始在多方面进行渗透，引发美方警惕。美军指挥官最近曝光了中共将长臂伸入拉美和南美的四种途径。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 8:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787227.md#1" target="_blank">美中签约后 三大因素或使中共承诺成空</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787227.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>美中第一阶段贸易协议将在未来几天签署，但有分析认为，签约后，中共承诺购买美国农产品的数额或将不会实现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 7:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787408.md#1" target="_blank">蔡英文胜选 法专家：国际社会应守护台湾民主</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787408.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1024x768_20200112000067-150x120.jpg" align ="left"></a>1月11日，台湾总统大选开票，驻法代表处邀请法国学者、记者齐聚观看开票。对蔡英文总统胜出，法国智库学者马拉费说，台湾的民主给国际社会许多启发，全球民主国家有责任共同守护。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 5:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787319.md#1" target="_blank">美国9个观选团访台 斯伯丁将军分享推文</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787319.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200111PHO0018l-150x120.jpg" align ="left"></a>在2020年台湾总统大选中，美国派出9个观选团访台，其中包括美国空军退役准将斯伯丁（Robert Spalding）等专家学者，而斯伯丁也在推特上分享与此行相关的一些照片和推文。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786768.md#1" target="_blank">中共稳经济拉开序幕 各地投资万亿搞基建</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/090609180407100160-150x120.jpg" align ="left"></a>今年1月份，大陆武汉等省市已经拉开了大兴土木搞基建的序幕，据悉这是大陆今年稳经济增长的一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 3:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787039.md#1" target="_blank">韩粉称“若蔡英文得800万票请全台吃鸡排”</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001110958202699-1-150x120.jpg" align ="left"></a>在台湾总统大选投票之前，一名据信是国民党候选人韩国瑜的粉丝扬言，如果民进党候选人、现任中华民国总统蔡英文拿到800万票，他就请台湾2,300万人吃鸡排，不料蔡英文以817万票高票胜选，形同对他狠狠地打脸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 2:43 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786635.md#1" target="_blank">台湾人从海外回乡 用选票向中共传递何信息</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786635.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM23Q-1-150x120.jpg" align ="left"></a>当地时候1月11日晚，台湾大选蔡英文以压倒性优势顺利连任总统。专家表示，本次选举体现出台湾民众对中共日益嚣张威权主义的拒绝，也是在向中共专制说“不”。选举结果对中共而言是巨大挫败。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 1:43 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786803.md#1" target="_blank">国民党内咎责声浪高涨 党主席之争提前开打</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786803.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200111PHO0178l-150x120.jpg" align ="left"></a>总统选举结果揭晓，国民党中央成了众矢之的，在开票过程中，一度有民众在国民党中央党部外激动地要求党主席吴敦义下台以示负责。吴敦义则率党内一级主管向社会鞠躬，表示“没有恋栈的问题”，将于15日向中常会提总辞。吴敦义的请辞，也预告国民党主席之争将开打。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 1:01 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786676.md#1" target="_blank">所属党立委选举失利 陈水扁：从此退出政坛</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786676.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/eb8bbc6d52693552ef1a5c826ac77042-150x120.jpg" align ="left"></a>中华民国前总统陈水扁在这次台湾选举中支持“一边一国行动党”，在该党选举失利后，阿扁今天（1月12日）宣布“从此退出政坛！谢谢了！再见了！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 11:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786589.md#1" target="_blank">加媒：对中共强硬立场 蔡英文赢得总统连任</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786589.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/283610c560a081ff638271734ebfe859-150x120.jpg" align ="left"></a>加拿大主流媒体《环球邮报》11日刊登驻亚洲特派员万德山（Nathan Vander Klippe）的文章称，因台湾选民支持民进党对中共的强硬立场，台湾总统蔡英文赢得大选，获得连任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 11:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789322.md#1" target="_blank">每日三退声明精选（2020/01/12）</a><br></h3>共产党贪腐邪恶，占尽了百姓的所有，还经常生事栽赃陷害无孤善良的民众，小时候被其所骗加入了中国共青团组织。特声明退出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787628.md#1" target="_blank">赤字多又缺钱 中共地方当局紧缩开支</a><br></h3>中国统计局陆续公布各省市截至去年11月的收支情况，数据显示，不少富裕省市也出现了严重财政赤字。多个地方政府已下达命令，立即收缩开支。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 7:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786992.md#1" target="_blank">中共外交部被点名“选人用人视野不宽”</a><br></h3>中共外交部被中共中纪委国家监委点名“选人用人视野不宽”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786649.md#1" target="_blank">大陆“国家一级演员”受贿细节首次被曝光</a><br></h3>大陆知名男高音歌唱家、云南艺术学院原副院长王红星落马近三年后获刑。其受贿细节首次被曝光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 1:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789372.md#1" target="_blank">每日三退声明精选（2020/01/11）</a><br></h3>本人是来自北京的赵祁疆。在中学时代，因为受到了中共邪党的蛊惑，我成为了加入邪党先锋队青年团的积极分子。中学期间，我的母亲曾经因为记录中共对退伍军人杀鸡取卵，兔死狗烹的残暴行为而被中共官员截查并强制删除手机内容。在移民加拿大以后，我了解了中共邪党欺人瞒世、草芥人命的邪恶行径。在大学攻读经济学和社会学期间，通过教授的谆谆善诱和不懈帮助，我终于了解了中共邪党的本质.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
